src/test/resources/cocos/valid/scopes/starImport/Symbol Definition.sysml
package 'Symbol Definition' {
  block Vehicle {
      value mass : Real;
      value status : VehicleStatus;

      part eng : Engine;

      ref driver : Person;
  }
  block Bus;
}